Add trials_id creation to BehaviorSession.from_lims
Add dummy trials object to testing.
Update presentations.pkl file.
Update docstrings.
update test pickle data.

--- a/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
@@ -5,10 +5,10 @@
    "id": "393c2a39",
    "metadata": {
     "papermill": {
-     "duration": 0.004088,
-     "end_time": "2023-02-28T21:30:18.743898",
+     "duration": 0.004381,
+     "end_time": "2023-03-23T01:06:55.086914",
      "exception": false,
-     "start_time": "2023-02-28T21:30:18.739810",
+     "start_time": "2023-03-23T01:06:55.082533",
      "status": "completed"
     },
     "tags": []
@@ -24,16 +24,16 @@
    "id": "0770199a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:30:18.753002Z",
-     "iopub.status.busy": "2023-02-28T21:30:18.752423Z",
-     "iopub.status.idle": "2023-02-28T21:30:18.760752Z",
-     "shell.execute_reply": "2023-02-28T21:30:18.760072Z"
+     "iopub.execute_input": "2023-03-23T01:06:55.095879Z",
+     "iopub.status.busy": "2023-03-23T01:06:55.095161Z",
+     "iopub.status.idle": "2023-03-23T01:06:55.103856Z",
+     "shell.execute_reply": "2023-03-23T01:06:55.103279Z"
     },
     "papermill": {
-     "duration": 0.014493,
-     "end_time": "2023-02-28T21:30:18.762286",
+     "duration": 0.014552,
+     "end_time": "2023-03-23T01:06:55.105336",
      "exception": false,
-     "start_time": "2023-02-28T21:30:18.747793",
+     "start_time": "2023-03-23T01:06:55.090784",
      "status": "completed"
     },
     "tags": []
@@ -49,16 +49,16 @@
    "id": "96b7108f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:30:18.770564Z",
-     "iopub.status.busy": "2023-02-28T21:30:18.770089Z",
-     "iopub.status.idle": "2023-02-28T21:30:18.773260Z",
-     "shell.execute_reply": "2023-02-28T21:30:18.772646Z"
+     "iopub.execute_input": "2023-03-23T01:06:55.113230Z",
+     "iopub.status.busy": "2023-03-23T01:06:55.112663Z",
+     "iopub.status.idle": "2023-03-23T01:06:55.115807Z",
+     "shell.execute_reply": "2023-03-23T01:06:55.115159Z"
     },
     "papermill": {
-     "duration": 0.008911,
-     "end_time": "2023-02-28T21:30:18.774691",
+     "duration": 0.008565,
+     "end_time": "2023-03-23T01:06:55.117214",
      "exception": false,
-     "start_time": "2023-02-28T21:30:18.765780",
+     "start_time": "2023-03-23T01:06:55.108649",
      "status": "completed"
     },
     "tags": [
@@ -77,16 +77,16 @@
    "metadata": {
     "collapsed": true,
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:30:18.795134Z",
-     "iopub.status.busy": "2023-02-28T21:30:18.794565Z",
-     "iopub.status.idle": "2023-02-28T21:30:21.679910Z",
-     "shell.execute_reply": "2023-02-28T21:30:21.679189Z"
+     "iopub.execute_input": "2023-03-23T01:06:55.136775Z",
+     "iopub.status.busy": "2023-03-23T01:06:55.136357Z",
+     "iopub.status.idle": "2023-03-23T01:06:57.981021Z",
+     "shell.execute_reply": "2023-03-23T01:06:57.980335Z"
     },
     "papermill": {
-     "duration": 2.891376,
-     "end_time": "2023-02-28T21:30:21.681664",
+     "duration": 2.850953,
+     "end_time": "2023-03-23T01:06:57.983327",
      "exception": false,
-     "start_time": "2023-02-28T21:30:18.790288",
+     "start_time": "2023-03-23T01:06:55.132374",
      "status": "completed"
     },
     "tags": []
@@ -109,10 +109,10 @@
    "id": "0c5a54a3",
    "metadata": {
     "papermill": {
-     "duration": 0.003673,
-     "end_time": "2023-02-28T21:30:21.689088",
+     "duration": 0.003453,
+     "end_time": "2023-03-23T01:06:57.990494",
      "exception": false,
-     "start_time": "2023-02-28T21:30:21.685415",
+     "start_time": "2023-03-23T01:06:57.987041",
      "status": "completed"
     },
     "tags": []
@@ -127,16 +127,16 @@
    "id": "1d80b72a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:30:21.697579Z",
-     "iopub.status.busy": "2023-02-28T21:30:21.696746Z",
-     "iopub.status.idle": "2023-02-28T21:30:52.469025Z",
-     "shell.execute_reply": "2023-02-28T21:30:52.468425Z"
+     "iopub.execute_input": "2023-03-23T01:06:57.998918Z",
+     "iopub.status.busy": "2023-03-23T01:06:57.998242Z",
+     "iopub.status.idle": "2023-03-23T01:07:37.372034Z",
+     "shell.execute_reply": "2023-03-23T01:07:37.371471Z"
     },
     "papermill": {
-     "duration": 30.779827,
-     "end_time": "2023-02-28T21:30:52.472250",
+     "duration": 39.380659,
+     "end_time": "2023-03-23T01:07:37.374580",
      "exception": false,
-     "start_time": "2023-02-28T21:30:21.692423",
+     "start_time": "2023-03-23T01:06:57.993921",
      "status": "completed"
     },
     "tags": []
@@ -146,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-28 21:30:21,804 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/528017428\n"
+      "2023-03-23 01:06:58,290 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/528017428\n"
      ]
     },
     {
@@ -248,10 +248,10 @@
    "id": "615603f0",
    "metadata": {
     "papermill": {
-     "duration": 0.003709,
-     "end_time": "2023-02-28T21:30:52.479862",
+     "duration": 0.003595,
+     "end_time": "2023-03-23T01:07:37.381923",
      "exception": false,
-     "start_time": "2023-02-28T21:30:52.476153",
+     "start_time": "2023-03-23T01:07:37.378328",
      "status": "completed"
     },
     "tags": []
@@ -266,16 +266,16 @@
    "id": "b84d9a20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:30:52.488759Z",
-     "iopub.status.busy": "2023-02-28T21:30:52.488187Z",
-     "iopub.status.idle": "2023-02-28T21:30:52.846431Z",
-     "shell.execute_reply": "2023-02-28T21:30:52.845707Z"
+     "iopub.execute_input": "2023-03-23T01:07:37.390369Z",
+     "iopub.status.busy": "2023-03-23T01:07:37.389881Z",
+     "iopub.status.idle": "2023-03-23T01:07:37.741452Z",
+     "shell.execute_reply": "2023-03-23T01:07:37.740801Z"
     },
     "papermill": {
-     "duration": 0.364633,
-     "end_time": "2023-02-28T21:30:52.848120",
+     "duration": 0.359413,
+     "end_time": "2023-03-23T01:07:37.744917",
      "exception": false,
-     "start_time": "2023-02-28T21:30:52.483487",
+     "start_time": "2023-03-23T01:07:37.385504",
      "status": "completed"
     },
     "tags": []
@@ -307,10 +307,10 @@
    "id": "642c4135",
    "metadata": {
     "papermill": {
-     "duration": 0.004216,
-     "end_time": "2023-02-28T21:30:52.856344",
+     "duration": 0.003871,
+     "end_time": "2023-03-23T01:07:37.752858",
      "exception": false,
-     "start_time": "2023-02-28T21:30:52.852128",
+     "start_time": "2023-03-23T01:07:37.748987",
      "status": "completed"
     },
     "tags": []
@@ -325,16 +325,16 @@
    "id": "a44cc00c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:30:52.865414Z",
-     "iopub.status.busy": "2023-02-28T21:30:52.864723Z",
-     "iopub.status.idle": "2023-02-28T21:30:53.071152Z",
-     "shell.execute_reply": "2023-02-28T21:30:53.070497Z"
+     "iopub.execute_input": "2023-03-23T01:07:37.761573Z",
+     "iopub.status.busy": "2023-03-23T01:07:37.761092Z",
+     "iopub.status.idle": "2023-03-23T01:07:37.956956Z",
+     "shell.execute_reply": "2023-03-23T01:07:37.956243Z"
     },
     "papermill": {
-     "duration": 0.212857,
-     "end_time": "2023-02-28T21:30:53.072891",
+     "duration": 0.202355,
+     "end_time": "2023-03-23T01:07:37.958887",
      "exception": false,
-     "start_time": "2023-02-28T21:30:52.860034",
+     "start_time": "2023-03-23T01:07:37.756532",
      "status": "completed"
     },
     "tags": []
@@ -360,10 +360,10 @@
    "id": "92555290",
    "metadata": {
     "papermill": {
-     "duration": 0.004205,
-     "end_time": "2023-02-28T21:30:53.081380",
+     "duration": 0.004206,
+     "end_time": "2023-03-23T01:07:37.967553",
      "exception": false,
-     "start_time": "2023-02-28T21:30:53.077175",
+     "start_time": "2023-03-23T01:07:37.963347",
      "status": "completed"
     },
     "tags": []
@@ -378,16 +378,16 @@
    "id": "ffe96a0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:30:53.091049Z",
-     "iopub.status.busy": "2023-02-28T21:30:53.090350Z",
-     "iopub.status.idle": "2023-02-28T21:30:54.499653Z",
-     "shell.execute_reply": "2023-02-28T21:30:54.498873Z"
+     "iopub.execute_input": "2023-03-23T01:07:37.977115Z",
+     "iopub.status.busy": "2023-03-23T01:07:37.976479Z",
+     "iopub.status.idle": "2023-03-23T01:07:39.356774Z",
+     "shell.execute_reply": "2023-03-23T01:07:39.356064Z"
     },
     "papermill": {
-     "duration": 1.416068,
-     "end_time": "2023-02-28T21:30:54.501365",
+     "duration": 1.386878,
+     "end_time": "2023-03-23T01:07:39.358397",
      "exception": false,
-     "start_time": "2023-02-28T21:30:53.085297",
+     "start_time": "2023-03-23T01:07:37.971519",
      "status": "completed"
     },
     "tags": []
@@ -415,10 +415,10 @@
    "id": "63d4282d",
    "metadata": {
     "papermill": {
-     "duration": 0.004637,
-     "end_time": "2023-02-28T21:30:54.510538",
+     "duration": 0.004485,
+     "end_time": "2023-03-23T01:07:39.367423",
      "exception": false,
-     "start_time": "2023-02-28T21:30:54.505901",
+     "start_time": "2023-03-23T01:07:39.362938",
      "status": "completed"
     },
     "tags": []
@@ -433,16 +433,16 @@
    "id": "00053c56",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:30:54.520259Z",
-     "iopub.status.busy": "2023-02-28T21:30:54.519991Z",
-     "iopub.status.idle": "2023-02-28T21:30:57.714227Z",
-     "shell.execute_reply": "2023-02-28T21:30:57.713492Z"
+     "iopub.execute_input": "2023-03-23T01:07:39.377180Z",
+     "iopub.status.busy": "2023-03-23T01:07:39.376553Z",
+     "iopub.status.idle": "2023-03-23T01:07:42.492919Z",
+     "shell.execute_reply": "2023-03-23T01:07:42.492283Z"
     },
     "papermill": {
-     "duration": 3.201532,
-     "end_time": "2023-02-28T21:30:57.716287",
+     "duration": 3.12302,
+     "end_time": "2023-03-23T01:07:42.494517",
      "exception": false,
-     "start_time": "2023-02-28T21:30:54.514755",
+     "start_time": "2023-03-23T01:07:39.371497",
      "status": "completed"
     },
     "tags": []
@@ -470,10 +470,10 @@
    "id": "aaaea49f",
    "metadata": {
     "papermill": {
-     "duration": 0.00424,
-     "end_time": "2023-02-28T21:30:57.725216",
+     "duration": 0.004488,
+     "end_time": "2023-03-23T01:07:42.503720",
      "exception": false,
-     "start_time": "2023-02-28T21:30:57.720976",
+     "start_time": "2023-03-23T01:07:42.499232",
      "status": "completed"
     },
     "tags": []
@@ -488,16 +488,16 @@
    "id": "5a22dfea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:30:57.735346Z",
-     "iopub.status.busy": "2023-02-28T21:30:57.734912Z",
-     "iopub.status.idle": "2023-02-28T21:31:05.157190Z",
-     "shell.execute_reply": "2023-02-28T21:31:05.156439Z"
+     "iopub.execute_input": "2023-03-23T01:07:42.513550Z",
+     "iopub.status.busy": "2023-03-23T01:07:42.512934Z",
+     "iopub.status.idle": "2023-03-23T01:07:49.794864Z",
+     "shell.execute_reply": "2023-03-23T01:07:49.794168Z"
     },
     "papermill": {
-     "duration": 7.429383,
-     "end_time": "2023-02-28T21:31:05.158872",
+     "duration": 7.289697,
+     "end_time": "2023-03-23T01:07:49.797576",
      "exception": false,
-     "start_time": "2023-02-28T21:30:57.729489",
+     "start_time": "2023-03-23T01:07:42.507879",
      "status": "completed"
     },
     "tags": []
@@ -570,10 +570,10 @@
    "id": "264b6f1d",
    "metadata": {
     "papermill": {
-     "duration": 0.006159,
-     "end_time": "2023-02-28T21:31:05.171800",
+     "duration": 0.005911,
+     "end_time": "2023-03-23T01:07:49.810531",
      "exception": false,
-     "start_time": "2023-02-28T21:31:05.165641",
+     "start_time": "2023-03-23T01:07:49.804620",
      "status": "completed"
     },
     "tags": []
@@ -587,10 +587,10 @@
    "id": "dfaab4e6",
    "metadata": {
     "papermill": {
-     "duration": 0.005989,
-     "end_time": "2023-02-28T21:31:05.183699",
+     "duration": 0.005651,
+     "end_time": "2023-03-23T01:07:49.821918",
      "exception": false,
-     "start_time": "2023-02-28T21:31:05.177710",
+     "start_time": "2023-03-23T01:07:49.816267",
      "status": "completed"
     },
     "tags": []
@@ -605,16 +605,16 @@
    "id": "50ef0982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:31:05.196826Z",
-     "iopub.status.busy": "2023-02-28T21:31:05.196530Z",
-     "iopub.status.idle": "2023-02-28T21:31:09.345064Z",
-     "shell.execute_reply": "2023-02-28T21:31:09.344340Z"
+     "iopub.execute_input": "2023-03-23T01:07:49.835098Z",
+     "iopub.status.busy": "2023-03-23T01:07:49.834317Z",
+     "iopub.status.idle": "2023-03-23T01:07:53.924750Z",
+     "shell.execute_reply": "2023-03-23T01:07:53.924154Z"
     },
     "papermill": {
-     "duration": 4.157509,
-     "end_time": "2023-02-28T21:31:09.346982",
+     "duration": 4.099355,
+     "end_time": "2023-03-23T01:07:53.926994",
      "exception": false,
-     "start_time": "2023-02-28T21:31:05.189473",
+     "start_time": "2023-03-23T01:07:49.827639",
      "status": "completed"
     },
     "tags": []
@@ -680,17 +680,17 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 52.26514,
-   "end_time": "2023-02-28T21:31:09.874368",
+   "duration": 60.308574,
+   "end_time": "2023-03-23T01:07:54.352741",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb",
-   "output_path": "/tmp/tmpn3u_fvoj/scratch_nb.ipynb",
+   "output_path": "/tmp/tmpkhnyckvw/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpn3u_fvoj",
+    "output_dir": "/tmp/tmpkhnyckvw",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-02-28T21:30:17.609228",
+   "start_time": "2023-03-23T01:06:54.044167",
    "version": "2.4.0"
   }
  },
