--- a/doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb
@@ -5,10 +5,10 @@
    "id": "0698dc8f",
    "metadata": {
     "papermill": {
-     "duration": 0.004534,
-     "end_time": "2023-02-28T21:34:45.674840",
+     "duration": 0.005167,
+     "end_time": "2023-03-23T00:42:29.193531",
      "exception": false,
-     "start_time": "2023-02-28T21:34:45.670306",
+     "start_time": "2023-03-23T00:42:29.188364",
      "status": "completed"
     },
     "tags": []
@@ -26,16 +26,16 @@
    "id": "5a52e7ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:34:45.683882Z",
-     "iopub.status.busy": "2023-02-28T21:34:45.683562Z",
-     "iopub.status.idle": "2023-02-28T21:34:45.692214Z",
-     "shell.execute_reply": "2023-02-28T21:34:45.691524Z"
+     "iopub.execute_input": "2023-03-23T00:42:29.202731Z",
+     "iopub.status.busy": "2023-03-23T00:42:29.202258Z",
+     "iopub.status.idle": "2023-03-23T00:42:29.211929Z",
+     "shell.execute_reply": "2023-03-23T00:42:29.211329Z"
     },
     "papermill": {
-     "duration": 0.014854,
-     "end_time": "2023-02-28T21:34:45.693742",
+     "duration": 0.015775,
+     "end_time": "2023-03-23T00:42:29.213389",
      "exception": false,
-     "start_time": "2023-02-28T21:34:45.678888",
+     "start_time": "2023-03-23T00:42:29.197614",
      "status": "completed"
     },
     "tags": []
@@ -51,16 +51,16 @@
    "id": "1138f1cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:34:45.702789Z",
-     "iopub.status.busy": "2023-02-28T21:34:45.702271Z",
-     "iopub.status.idle": "2023-02-28T21:34:45.705520Z",
-     "shell.execute_reply": "2023-02-28T21:34:45.704985Z"
+     "iopub.execute_input": "2023-03-23T00:42:29.221218Z",
+     "iopub.status.busy": "2023-03-23T00:42:29.221000Z",
+     "iopub.status.idle": "2023-03-23T00:42:29.224010Z",
+     "shell.execute_reply": "2023-03-23T00:42:29.223399Z"
     },
     "papermill": {
-     "duration": 0.009406,
-     "end_time": "2023-02-28T21:34:45.707095",
+     "duration": 0.008466,
+     "end_time": "2023-03-23T00:42:29.225326",
      "exception": false,
-     "start_time": "2023-02-28T21:34:45.697689",
+     "start_time": "2023-03-23T00:42:29.216860",
      "status": "completed"
     },
     "tags": [
@@ -78,16 +78,16 @@
    "id": "be1c0a7f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:34:45.729935Z",
-     "iopub.status.busy": "2023-02-28T21:34:45.729447Z",
-     "iopub.status.idle": "2023-02-28T21:34:46.119413Z",
-     "shell.execute_reply": "2023-02-28T21:34:46.118745Z"
+     "iopub.execute_input": "2023-03-23T00:42:29.246086Z",
+     "iopub.status.busy": "2023-03-23T00:42:29.245485Z",
+     "iopub.status.idle": "2023-03-23T00:42:29.517591Z",
+     "shell.execute_reply": "2023-03-23T00:42:29.516955Z"
     },
     "papermill": {
-     "duration": 0.396501,
-     "end_time": "2023-02-28T21:34:46.121416",
+     "duration": 0.278263,
+     "end_time": "2023-03-23T00:42:29.519595",
      "exception": false,
-     "start_time": "2023-02-28T21:34:45.724915",
+     "start_time": "2023-03-23T00:42:29.241332",
      "status": "completed"
     },
     "tags": []
@@ -120,10 +120,10 @@
    "id": "57a3dd75",
    "metadata": {
     "papermill": {
-     "duration": 0.003831,
-     "end_time": "2023-02-28T21:34:46.129154",
+     "duration": 0.003924,
+     "end_time": "2023-03-23T00:42:29.527377",
      "exception": false,
-     "start_time": "2023-02-28T21:34:46.125323",
+     "start_time": "2023-03-23T00:42:29.523453",
      "status": "completed"
     },
     "tags": []
@@ -139,16 +139,16 @@
    "id": "86d015a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:34:46.137998Z",
-     "iopub.status.busy": "2023-02-28T21:34:46.137255Z",
-     "iopub.status.idle": "2023-02-28T21:35:16.557519Z",
-     "shell.execute_reply": "2023-02-28T21:35:16.555565Z"
+     "iopub.execute_input": "2023-03-23T00:42:29.535781Z",
+     "iopub.status.busy": "2023-03-23T00:42:29.535261Z",
+     "iopub.status.idle": "2023-03-23T00:43:08.904986Z",
+     "shell.execute_reply": "2023-03-23T00:43:08.904381Z"
     },
     "papermill": {
-     "duration": 30.431107,
-     "end_time": "2023-02-28T21:35:16.563810",
+     "duration": 39.379678,
+     "end_time": "2023-03-23T00:43:08.910585",
      "exception": false,
-     "start_time": "2023-02-28T21:34:46.132703",
+     "start_time": "2023-03-23T00:42:29.530907",
      "status": "completed"
     },
     "tags": []
@@ -158,7 +158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-28 21:34:48,822 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514340576\n"
+      "2023-03-23 00:42:31,733 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514340576\n"
      ]
     },
     {
@@ -193,10 +193,10 @@
    "id": "abc48527",
    "metadata": {
     "papermill": {
-     "duration": 0.004096,
-     "end_time": "2023-02-28T21:35:16.594375",
+     "duration": 0.00398,
+     "end_time": "2023-03-23T00:43:08.918514",
      "exception": false,
-     "start_time": "2023-02-28T21:35:16.590279",
+     "start_time": "2023-03-23T00:43:08.914534",
      "status": "completed"
     },
     "tags": []
@@ -212,16 +212,16 @@
    "id": "5c8b0144",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:35:16.604279Z",
-     "iopub.status.busy": "2023-02-28T21:35:16.603278Z",
-     "iopub.status.idle": "2023-02-28T21:35:36.206666Z",
-     "shell.execute_reply": "2023-02-28T21:35:36.205510Z"
+     "iopub.execute_input": "2023-03-23T00:43:08.927764Z",
+     "iopub.status.busy": "2023-03-23T00:43:08.927238Z",
+     "iopub.status.idle": "2023-03-23T00:43:43.935857Z",
+     "shell.execute_reply": "2023-03-23T00:43:43.935289Z"
     },
     "papermill": {
-     "duration": 19.610068,
-     "end_time": "2023-02-28T21:35:36.208329",
+     "duration": 35.017617,
+     "end_time": "2023-03-23T00:43:43.940034",
      "exception": false,
-     "start_time": "2023-02-28T21:35:16.598261",
+     "start_time": "2023-03-23T00:43:08.922417",
      "status": "completed"
     },
     "tags": []
@@ -231,7 +231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-28 21:35:16,715 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514422179\n"
+      "2023-03-23 00:43:09,079 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514422179\n"
      ]
     },
     {
@@ -266,10 +266,10 @@
    "id": "bb211aeb",
    "metadata": {
     "papermill": {
-     "duration": 0.004392,
-     "end_time": "2023-02-28T21:35:36.217354",
+     "duration": 0.004033,
+     "end_time": "2023-03-23T00:43:43.948331",
      "exception": false,
-     "start_time": "2023-02-28T21:35:36.212962",
+     "start_time": "2023-03-23T00:43:43.944298",
      "status": "completed"
     },
     "tags": []
@@ -285,16 +285,16 @@
    "id": "7da6fa06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:35:36.228107Z",
-     "iopub.status.busy": "2023-02-28T21:35:36.227302Z",
-     "iopub.status.idle": "2023-02-28T21:35:37.993830Z",
-     "shell.execute_reply": "2023-02-28T21:35:37.993134Z"
+     "iopub.execute_input": "2023-03-23T00:43:43.957984Z",
+     "iopub.status.busy": "2023-03-23T00:43:43.957286Z",
+     "iopub.status.idle": "2023-03-23T00:43:45.715606Z",
+     "shell.execute_reply": "2023-03-23T00:43:45.714848Z"
     },
     "papermill": {
-     "duration": 1.776764,
-     "end_time": "2023-02-28T21:35:37.998286",
+     "duration": 1.765102,
+     "end_time": "2023-03-23T00:43:45.717469",
      "exception": false,
-     "start_time": "2023-02-28T21:35:36.221522",
+     "start_time": "2023-03-23T00:43:43.952367",
      "status": "completed"
     },
     "tags": []
@@ -332,10 +332,10 @@
    "id": "09357f1b",
    "metadata": {
     "papermill": {
-     "duration": 0.005904,
-     "end_time": "2023-02-28T21:35:38.010611",
+     "duration": 0.005812,
+     "end_time": "2023-03-23T00:43:45.729895",
      "exception": false,
-     "start_time": "2023-02-28T21:35:38.004707",
+     "start_time": "2023-03-23T00:43:45.724083",
      "status": "completed"
     },
     "tags": []
@@ -350,16 +350,16 @@
    "id": "c40e2880",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:35:38.026087Z",
-     "iopub.status.busy": "2023-02-28T21:35:38.025512Z",
-     "iopub.status.idle": "2023-02-28T21:35:38.205498Z",
-     "shell.execute_reply": "2023-02-28T21:35:38.204772Z"
+     "iopub.execute_input": "2023-03-23T00:43:45.743286Z",
+     "iopub.status.busy": "2023-03-23T00:43:45.742985Z",
+     "iopub.status.idle": "2023-03-23T00:43:45.928038Z",
+     "shell.execute_reply": "2023-03-23T00:43:45.927345Z"
     },
     "papermill": {
-     "duration": 0.188685,
-     "end_time": "2023-02-28T21:35:38.207148",
+     "duration": 0.193934,
+     "end_time": "2023-03-23T00:43:45.929748",
      "exception": false,
-     "start_time": "2023-02-28T21:35:38.018463",
+     "start_time": "2023-03-23T00:43:45.735814",
      "status": "completed"
     },
     "tags": []
@@ -397,10 +397,10 @@
    "id": "fed7f6ce",
    "metadata": {
     "papermill": {
-     "duration": 0.006338,
-     "end_time": "2023-02-28T21:35:38.219986",
+     "duration": 0.006685,
+     "end_time": "2023-03-23T00:43:45.942973",
      "exception": false,
-     "start_time": "2023-02-28T21:35:38.213648",
+     "start_time": "2023-03-23T00:43:45.936288",
      "status": "completed"
     },
     "tags": []
@@ -416,16 +416,16 @@
    "id": "a0b0297a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:35:38.233349Z",
-     "iopub.status.busy": "2023-02-28T21:35:38.233069Z",
-     "iopub.status.idle": "2023-02-28T21:35:39.174306Z",
-     "shell.execute_reply": "2023-02-28T21:35:39.173589Z"
+     "iopub.execute_input": "2023-03-23T00:43:45.959104Z",
+     "iopub.status.busy": "2023-03-23T00:43:45.958530Z",
+     "iopub.status.idle": "2023-03-23T00:43:46.912101Z",
+     "shell.execute_reply": "2023-03-23T00:43:46.911478Z"
     },
     "papermill": {
-     "duration": 0.950496,
-     "end_time": "2023-02-28T21:35:39.176497",
+     "duration": 0.963137,
+     "end_time": "2023-03-23T00:43:46.914224",
      "exception": false,
-     "start_time": "2023-02-28T21:35:38.226001",
+     "start_time": "2023-03-23T00:43:45.951087",
      "status": "completed"
     },
     "tags": []
@@ -461,10 +461,10 @@
    "id": "cd9cdd9a",
    "metadata": {
     "papermill": {
-     "duration": 0.007644,
-     "end_time": "2023-02-28T21:35:39.192033",
+     "duration": 0.007604,
+     "end_time": "2023-03-23T00:43:46.929842",
      "exception": false,
-     "start_time": "2023-02-28T21:35:39.184389",
+     "start_time": "2023-03-23T00:43:46.922238",
      "status": "completed"
     },
     "tags": []
@@ -479,16 +479,16 @@
    "id": "7ffd1a18",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:35:39.208579Z",
-     "iopub.status.busy": "2023-02-28T21:35:39.207867Z",
-     "iopub.status.idle": "2023-02-28T21:35:39.599206Z",
-     "shell.execute_reply": "2023-02-28T21:35:39.598477Z"
+     "iopub.execute_input": "2023-03-23T00:43:46.946893Z",
+     "iopub.status.busy": "2023-03-23T00:43:46.946372Z",
+     "iopub.status.idle": "2023-03-23T00:43:47.346063Z",
+     "shell.execute_reply": "2023-03-23T00:43:47.345297Z"
     },
     "papermill": {
-     "duration": 0.401509,
-     "end_time": "2023-02-28T21:35:39.600942",
+     "duration": 0.410329,
+     "end_time": "2023-03-23T00:43:47.347793",
      "exception": false,
-     "start_time": "2023-02-28T21:35:39.199433",
+     "start_time": "2023-03-23T00:43:46.937464",
      "status": "completed"
     },
     "tags": []
@@ -523,10 +523,10 @@
    "id": "d64df66f",
    "metadata": {
     "papermill": {
-     "duration": 0.007943,
-     "end_time": "2023-02-28T21:35:39.616790",
+     "duration": 0.008031,
+     "end_time": "2023-03-23T00:43:47.363840",
      "exception": false,
-     "start_time": "2023-02-28T21:35:39.608847",
+     "start_time": "2023-03-23T00:43:47.355809",
      "status": "completed"
     },
     "tags": []
@@ -542,16 +542,16 @@
    "id": "045e1866",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:35:39.634019Z",
-     "iopub.status.busy": "2023-02-28T21:35:39.633564Z",
-     "iopub.status.idle": "2023-02-28T21:36:09.189098Z",
-     "shell.execute_reply": "2023-02-28T21:36:09.188437Z"
+     "iopub.execute_input": "2023-03-23T00:43:47.381097Z",
+     "iopub.status.busy": "2023-03-23T00:43:47.380556Z",
+     "iopub.status.idle": "2023-03-23T00:44:29.956047Z",
+     "shell.execute_reply": "2023-03-23T00:44:29.955489Z"
     },
     "papermill": {
-     "duration": 29.565773,
-     "end_time": "2023-02-28T21:36:09.190734",
+     "duration": 42.592726,
+     "end_time": "2023-03-23T00:44:29.964409",
      "exception": false,
-     "start_time": "2023-02-28T21:35:39.624961",
+     "start_time": "2023-03-23T00:43:47.371683",
      "status": "completed"
     },
     "tags": []
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-28 21:35:39,771 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/516238128\n"
+      "2023-03-23 00:43:47,553 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/516238128\n"
      ]
     },
     {
@@ -596,10 +596,10 @@
    "id": "af3112c7",
    "metadata": {
     "papermill": {
-     "duration": 0.008089,
-     "end_time": "2023-02-28T21:36:09.206998",
+     "duration": 0.007835,
+     "end_time": "2023-03-23T00:44:29.980044",
      "exception": false,
-     "start_time": "2023-02-28T21:36:09.198909",
+     "start_time": "2023-03-23T00:44:29.972209",
      "status": "completed"
     },
     "tags": []
@@ -614,16 +614,16 @@
    "id": "86abe247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:36:09.224351Z",
-     "iopub.status.busy": "2023-02-28T21:36:09.223571Z",
-     "iopub.status.idle": "2023-02-28T21:36:09.386489Z",
-     "shell.execute_reply": "2023-02-28T21:36:09.385754Z"
+     "iopub.execute_input": "2023-03-23T00:44:29.996804Z",
+     "iopub.status.busy": "2023-03-23T00:44:29.996274Z",
+     "iopub.status.idle": "2023-03-23T00:44:30.159424Z",
+     "shell.execute_reply": "2023-03-23T00:44:30.158796Z"
     },
     "papermill": {
-     "duration": 0.173466,
-     "end_time": "2023-02-28T21:36:09.388186",
+     "duration": 0.173219,
+     "end_time": "2023-03-23T00:44:30.160940",
      "exception": false,
-     "start_time": "2023-02-28T21:36:09.214720",
+     "start_time": "2023-03-23T00:44:29.987721",
      "status": "completed"
     },
     "tags": []
@@ -679,17 +679,17 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 85.260232,
-   "end_time": "2023-02-28T21:36:09.815213",
+   "duration": 122.361278,
+   "end_time": "2023-03-23T00:44:30.588376",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb",
-   "output_path": "/tmp/tmp59ra08ug/scratch_nb.ipynb",
+   "output_path": "/tmp/tmphvi58es5/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmp59ra08ug",
+    "output_dir": "/tmp/tmphvi58es5",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-02-28T21:34:44.554981",
+   "start_time": "2023-03-23T00:42:28.227098",
    "version": "2.4.0"
   }
  },
