--- a/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
+++ b/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
@@ -5,10 +5,10 @@
    "id": "ab898518",
    "metadata": {
     "papermill": {
-     "duration": 0.003081,
-     "end_time": "2023-02-28T21:17:34.532684",
+     "duration": 0.003048,
+     "end_time": "2023-03-23T01:16:12.899220",
      "exception": false,
-     "start_time": "2023-02-28T21:17:34.529603",
+     "start_time": "2023-03-23T01:16:12.896172",
      "status": "completed"
     },
     "tags": []
@@ -25,10 +25,10 @@
    "id": "2457b067",
    "metadata": {
     "papermill": {
-     "duration": 0.002069,
-     "end_time": "2023-02-28T21:17:34.537237",
+     "duration": 0.002065,
+     "end_time": "2023-03-23T01:16:12.903994",
      "exception": false,
-     "start_time": "2023-02-28T21:17:34.535168",
+     "start_time": "2023-03-23T01:16:12.901929",
      "status": "completed"
     },
     "tags": []
@@ -44,16 +44,16 @@
    "id": "6c46abcb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:17:34.542940Z",
-     "iopub.status.busy": "2023-02-28T21:17:34.542487Z",
-     "iopub.status.idle": "2023-02-28T21:17:34.551184Z",
-     "shell.execute_reply": "2023-02-28T21:17:34.550478Z"
+     "iopub.execute_input": "2023-03-23T01:16:12.909665Z",
+     "iopub.status.busy": "2023-03-23T01:16:12.909131Z",
+     "iopub.status.idle": "2023-03-23T01:16:12.917328Z",
+     "shell.execute_reply": "2023-03-23T01:16:12.916672Z"
     },
     "papermill": {
-     "duration": 0.013391,
-     "end_time": "2023-02-28T21:17:34.552729",
+     "duration": 0.012701,
+     "end_time": "2023-03-23T01:16:12.918775",
      "exception": false,
-     "start_time": "2023-02-28T21:17:34.539338",
+     "start_time": "2023-03-23T01:16:12.906074",
      "status": "completed"
     },
     "tags": []
@@ -69,16 +69,16 @@
    "id": "6ac4bacf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:17:34.558446Z",
-     "iopub.status.busy": "2023-02-28T21:17:34.557963Z",
-     "iopub.status.idle": "2023-02-28T21:17:34.561142Z",
-     "shell.execute_reply": "2023-02-28T21:17:34.560532Z"
+     "iopub.execute_input": "2023-03-23T01:16:12.924175Z",
+     "iopub.status.busy": "2023-03-23T01:16:12.923652Z",
+     "iopub.status.idle": "2023-03-23T01:16:12.926562Z",
+     "shell.execute_reply": "2023-03-23T01:16:12.926090Z"
     },
     "papermill": {
-     "duration": 0.007518,
-     "end_time": "2023-02-28T21:17:34.562505",
+     "duration": 0.007159,
+     "end_time": "2023-03-23T01:16:12.928041",
      "exception": false,
-     "start_time": "2023-02-28T21:17:34.554987",
+     "start_time": "2023-03-23T01:16:12.920882",
      "status": "completed"
     },
     "tags": [
@@ -96,16 +96,16 @@
    "id": "2db02eeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:17:34.577668Z",
-     "iopub.status.busy": "2023-02-28T21:17:34.577137Z",
-     "iopub.status.idle": "2023-02-28T21:17:37.430302Z",
-     "shell.execute_reply": "2023-02-28T21:17:37.429570Z"
+     "iopub.execute_input": "2023-03-23T01:16:12.946706Z",
+     "iopub.status.busy": "2023-03-23T01:16:12.946167Z",
+     "iopub.status.idle": "2023-03-23T01:16:15.932195Z",
+     "shell.execute_reply": "2023-03-23T01:16:15.931459Z"
     },
     "papermill": {
-     "duration": 2.85777,
-     "end_time": "2023-02-28T21:17:37.432108",
+     "duration": 2.990272,
+     "end_time": "2023-03-23T01:16:15.933715",
      "exception": false,
-     "start_time": "2023-02-28T21:17:34.574338",
+     "start_time": "2023-03-23T01:16:12.943443",
      "status": "completed"
     },
     "tags": []
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-28 21:17:36,959 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/590985414\n"
+      "2023-03-23 01:16:14,954 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/590985414\n"
      ]
     },
     {
@@ -153,10 +153,10 @@
    "metadata": {
     "collapsed": true,
     "papermill": {
-     "duration": 0.002339,
-     "end_time": "2023-02-28T21:17:37.437075",
+     "duration": 0.002417,
+     "end_time": "2023-03-23T01:16:15.938733",
      "exception": false,
-     "start_time": "2023-02-28T21:17:37.434736",
+     "start_time": "2023-03-23T01:16:15.936316",
      "status": "completed"
     },
     "tags": []
@@ -172,16 +172,16 @@
    "id": "187b40f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:17:37.443303Z",
-     "iopub.status.busy": "2023-02-28T21:17:37.442591Z",
-     "iopub.status.idle": "2023-02-28T21:17:37.457530Z",
-     "shell.execute_reply": "2023-02-28T21:17:37.456932Z"
+     "iopub.execute_input": "2023-03-23T01:16:15.944465Z",
+     "iopub.status.busy": "2023-03-23T01:16:15.943997Z",
+     "iopub.status.idle": "2023-03-23T01:16:15.957835Z",
+     "shell.execute_reply": "2023-03-23T01:16:15.957169Z"
     },
     "papermill": {
-     "duration": 0.019606,
-     "end_time": "2023-02-28T21:17:37.458951",
+     "duration": 0.018413,
+     "end_time": "2023-03-23T01:16:15.959336",
      "exception": false,
-     "start_time": "2023-02-28T21:17:37.439345",
+     "start_time": "2023-03-23T01:16:15.940923",
      "status": "completed"
     },
     "tags": []
@@ -257,16 +257,16 @@
    "id": "53a58933",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:17:37.465445Z",
-     "iopub.status.busy": "2023-02-28T21:17:37.464951Z",
-     "iopub.status.idle": "2023-02-28T21:23:38.618282Z",
-     "shell.execute_reply": "2023-02-28T21:23:38.617564Z"
+     "iopub.execute_input": "2023-03-23T01:16:15.965322Z",
+     "iopub.status.busy": "2023-03-23T01:16:15.964910Z",
+     "iopub.status.idle": "2023-03-23T01:23:29.119700Z",
+     "shell.execute_reply": "2023-03-23T01:23:29.119099Z"
     },
     "papermill": {
-     "duration": 361.167697,
-     "end_time": "2023-02-28T21:23:38.629257",
+     "duration": 433.1613,
+     "end_time": "2023-03-23T01:23:29.123043",
      "exception": false,
-     "start_time": "2023-02-28T21:17:37.461560",
+     "start_time": "2023-03-23T01:16:15.961743",
      "status": "completed"
     },
     "tags": []
@@ -276,8 +276,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-28 21:22:48,061 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540997912\n",
-      "2023-02-28 21:23:13,287 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540653508\n"
+      "2023-03-23 01:22:21,828 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540997912\n",
+      "2023-03-23 01:23:00,677 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540653508\n"
      ]
     },
     {
@@ -338,16 +338,16 @@
    "id": "1d72ff29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T21:23:38.644197Z",
-     "iopub.status.busy": "2023-02-28T21:23:38.643423Z",
-     "iopub.status.idle": "2023-02-28T21:23:38.654318Z",
-     "shell.execute_reply": "2023-02-28T21:23:38.653799Z"
+     "iopub.execute_input": "2023-03-23T01:23:29.137737Z",
+     "iopub.status.busy": "2023-03-23T01:23:29.137133Z",
+     "iopub.status.idle": "2023-03-23T01:23:29.147811Z",
+     "shell.execute_reply": "2023-03-23T01:23:29.147196Z"
     },
     "papermill": {
-     "duration": 0.019953,
-     "end_time": "2023-02-28T21:23:38.655781",
+     "duration": 0.01981,
+     "end_time": "2023-03-23T01:23:29.149542",
      "exception": false,
-     "start_time": "2023-02-28T21:23:38.635828",
+     "start_time": "2023-03-23T01:23:29.129732",
      "status": "completed"
     },
     "tags": []
@@ -442,17 +442,17 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 365.819005,
-   "end_time": "2023-02-28T21:23:39.080855",
+   "duration": 437.597927,
+   "end_time": "2023-03-23T01:23:29.473635",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb",
-   "output_path": "/tmp/tmpl_d6td6_/scratch_nb.ipynb",
+   "output_path": "/tmp/tmpuaoky9sj/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpl_d6td6_",
+    "output_dir": "/tmp/tmpuaoky9sj",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-02-28T21:17:33.261850",
+   "start_time": "2023-03-23T01:16:11.875708",
    "version": "2.4.0"
   }
  },
